Fix bug with not visible flash messages

--- a/src/moviesapp/styles/utils.scss
+++ b/src/moviesapp/styles/utils.scss
@@ -14,7 +14,7 @@
   width: 260px;
   -webkit-perspective: 400px;
           perspective: 400px;
-  z-index: 1;
+  z-index: 2000;
 
   .flash__message {
     width: 260px;
